# bloomfs

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  setup.cfg
src/bloomfs/core/: __init__.py  filter.py
src/bloomfs/core/containers/: __init__.py  abstract.py  bitstring_container.py  bool_container.py
src/bloomfs/core/element/: __init__.py  abstract.py
src/bloomfs/core/filters/: __init__.py  abstract.py  bloom.py
src/bloomfs/core/hashing/: __init__.py  abstract.py  standard.py
src/bloomfs/core/serializers/: __init__.py  abstract.py  pickle_serializer.py
test/bloomfs/core/containers/: test_bool_container.py
test/bloomfs/core/filters/: bloom_test.py
test/bloomfs/core/serializers/: test_pickle_serializer.py
